[package]
name = "pds"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread"]}
embassy-time = { version = "0.5.0" }
embassy-rp = { version = "0.9.0", features = ["unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.5"
smart-leds = "0.4.0"
embassy-usb = { version = "0.5.1" }
embassy-usb-logger = { version = "0.5.1" }
log = "0.4.29"
panic-usb-boot = "0.3.0"
embedded-graphics = "0.8.1"
embedded-hal-async = "1.0.0"
oled_async = { git = "https://github.com/cschuhen/oled_drivers", rev = "0aa4b3d", features = ["i2c"] }
display-interface-i2c = "0.5.0"
pio = "0.2.1"
pio-proc = "0.2.2"
fixed = "1.30.0"
fixed-macro = "1.2.0"

[profile.release]
debug = false
opt-level = "z" 

# below configs are here to mute the rust-analyzer error.
# "can't find crate for 'test'" as this is a no_std project
[[bin]]
name = "pds"
test = false
bench = false
