[package]
edition      = "2024"
name         = "pds"
rust-version = "1.88"
version      = "0.1.0"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "unstable"] }
esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp32s3",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
rtt-target = { version = "0.6.2", features = ["log"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = [] }
embassy-time = "0.5.0"
critical-section = "1.2.0"
embassy-sync = "0.7.2"
log = "0.4.29"
embassy-futures = "0.1.2"
embedded-graphics = "0.8.1"
embedded-hal-async = "1.0.0"
oled_async = { git = "https://github.com/cschuhen/oled_drivers", rev = "0aa4b3d", features = ["i2c"] }
display-interface = "0.5"
display-interface-i2c = "0.5"
tinybmp = "0.7.0"
tinygif = "0.0.4"
panic-rtt-target = "0.2.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[lib]
bench = false
test = false

[[bin]]
name = "pds"
test = false
bench = false

